colang-cli/tests/samples/good/int_variables.co
fun main() {
  var x: int;
  var y = 42;
  var z = x + y;
  assert(z == 42);
}
