colang-cli/tests/samples/compile_error/field_type_cycle_multiple_types.co
struct Foo {
  next: Bar;
}

struct Bar {
  prev: Foo;
}

fun main() { }
